Text no longer wraps game info panel

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -173,6 +173,10 @@ a.btn-link:hover {
 	filter: none;
 }
 
+.section-entry .description{
+	overflow: auto;
+}
+
 .game-info-panel {
 	float: right;
 	margin-left: 1em;
